--- a/petshop/templates/editpet.html
+++ b/petshop/templates/editpet.html
@@ -17,7 +17,7 @@
   <div class="mb-3">
     <label for = "description" class="form-label">Description</label><br/>
     <textarea rows="10" id="description" class="form-control"
-              name="description">
+           name="description">
       {{description}}
     </textarea>
   </div>
@@ -25,7 +25,12 @@
   <div class="mb-3">
     <div class="form-check">
       {# TODO  Add sold checkbox here #}
-      <label class="form-check-label" for="sold" > Sold </label>
+        
+      <label class="form-check-label" for="sold" > Sold </label><br/>
+      <textarea rows="10" id="sold" class="form-control"
+           name="sold">
+      {{sold}}
+    </textarea>
     </div>
   </div>
 
